# Micromouse

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  adc.h  gpio.h
.github/workflows/: ci-actions.yml
app/: CMakeLists.txt
app/folder_name/: CMakeLists.txt  adc.h  board.h  gpio.cc  gpio.h  main.cc
app/folder_name/bsp/: CMakeLists.txt  hardware_specific.cc
cmake/: README.md  build-util.cmake
common/core/: CMakeLists.txt  dummy_test.cc
common/drivers/: CMakeLists.txt
common/drivers/IO/: gpio.h
common/drivers/platform/stm32/: CMakeLists.txt  st_gpio.cc  st_gpio.cpp  st_gpio.h  st_gpio.hpp
mcu_support/: README.md
mcu_support/stm32/f4xx/: stm32f446xx.h
mcu_support/stm32/f4xx/f446/: STM32F446RETX_FLASH.ld  startup_stm32f446retx.s
